Fix (potential) to the z-index problem on iPhone

--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -72,6 +72,8 @@
 	margin-top: 3rem;
 	width: 60px;
 	z-index: 1;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 }
 
 .product {
